content/consul/v1.8.x/content/commands/acl/binding-rule/read.mdx
---
layout: commands
page_title: 'Commands: ACL Binding Rule Read'
sidebar_title: read
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-04T10:42:51-06:00
last_modified: 2025-11-04T10:42:51-06:00
# END AUTO GENERATED METADATA
---

# Consul ACL Binding Rule Read

Command: `consul acl binding-rule read`

The `acl binding-rule read` command reads and displays a binding rules details.

## Usage

Usage: `consul acl binding-rule read [options] [args]`

#### API Options

@include 'http_api_options_client.mdx'

@include 'http_api_options_server.mdx'

#### Command Options

- `-id=<string>` - The ID of the binding rule to read. It may be specified as a unique ID
  prefix but will error if the prefix matches multiple binding rule IDs.

- `-meta` - Indicates that binding rule metadata such as the raft
  indices should be shown for each entry.

- `-format={pretty|json}` - Command output format. The default value is `pretty`.

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

## Examples

Get binding rule details:

```shell-session
$ consul acl binding-rule read -id '0ec1bd2f-1d3b-bafb-d9bf-90ef04ab1890'
ID:           0ec1bd2f-1d3b-bafb-d9bf-90ef04ab1890
AuthMethod:   minikube
Description:  wildcard service
BindType:     service
BindName:     k8s-${serviceaccount.name}
Selector:     serviceaccount.namespace==default and serviceaccount.name!=vault
```
